--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,29 +10,6 @@
                     
             <div class="menu-on-home">
                 <header-menu></header-menu>
-                <!-- <div class="left-area-menu">
-                    <button mat-button routerLink="/home" class="logo">
-                        <mat-icon>home</mat-icon>
-                        <span class="logo">Make my mind</span> 
-                    </button>
-                    <button mat-button routerLink="/wall" *ngIf="authService.CurrentUser">{{'Wall' | translate}}</button>
-                    <button mat-button routerLink="/category" *ngIf="authService.CurrentUser">{{'Category' | translate}}</button>
-                    <button mat-button routerLink="/brickType" *ngIf="authService.CurrentUser">{{'Goals' | translate}}</button>
-                </div>
-
-                <div class="rigth-area-menu">
-
-                    <button mat-button [matMenuTriggerFor]="userinfo" *ngIf="authService.CurrentUser">{{authService.CurrentUser.username}}</button>
-                    <mat-menu #userinfo="matMenu">
-                        <button mat-menu-item *ngIf="authService.CurrentUser">{{authService.CurrentUser.nickname}}</button>
-                        <button mat-menu-item *ngIf="authService.CurrentUser">{{authService.CurrentUser.created}}</button>
-                    </mat-menu>
-
-                    <locale-change></locale-change>
-
-                    <loging></loging>
-
-                </div> -->
             </div>
             <div class="first-screen">
                 <div class="left-home-continer">
@@ -50,14 +27,9 @@
                     Here will be an image
                 </div>
             </div>
-            <!-- <div class="ptext">
-                <span class="border">
-                    parallax website
-                </span>
-            </div> -->
-            <div class="menu-on-home">
+            <!-- <div class="menu-on-home">
                 Here will be something more
-            </div>
+            </div> -->
 
         </div>
     </div>
