SpeedUp first loading, fixed style problem for home page

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -167,7 +167,7 @@ $hexagon-index: 0.3;
 
 
 .pimg1{
-    background-image: url(../../images/866422.jpg);
+    background-image: url(../../images/86642222.jpg);
     height: 200vh;
     width: 100%;
     position: absolute;
@@ -184,7 +184,7 @@ $hexagon-index: 0.3;
     position: absolute;
     z-index: 2;
     background-image: url(../../images/architecture-buildings-city-366283.png);
-    height: 100vh;
+    height: 800px;
     width: 100%;
     top: -400px;
     background-attachment: scroll;
