Changed first screen

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="first-section">
                     
-            <div class="menu-on-home">
+            <div>
                 <header-menu></header-menu>
             </div>
             <div class="first-screen">
@@ -19,17 +19,19 @@
                         - Аристотель <br>
                     </div>
                     <div class="secondary-words">
-                        Привычки подобны канату. Мы плетем и плетем его изо дня в день, и вскоре его уже невозможно разорвать <br>
+                        Привычки подобны канату.  <br>
+                        Мы плетем и плетем его изо дня в день, <br>
+                        и вскоре его уже невозможно разорвать <br>
                         — Хорейс Манн
                     </div>
                 </div>
                 <div class="right-home-container">
-                    Here will be an image
+                    
                 </div>
             </div>
-            <!-- <div class="menu-on-home">
-                Here will be something more
-            </div> -->
+            <div class="footer-on-home">
+                Исследуй наши теории
+            </div>
 
         </div>
     </div>
