--- a/src/app/brick/brick-modal/brick-modal.component.html
+++ b/src/app/brick/brick-modal/brick-modal.component.html
@@ -17,7 +17,7 @@
     </mat-form-field>
   
     <mat-form-field>
-      <textarea matInput placeholder="Description" formControlName="description"></textarea>
+      <textarea matInput placeholder="Description" rows="5" formControlName="description"></textarea>
     </mat-form-field>
 
     <div class="button-container">
