--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,13 +15,6 @@ $hexagon-index: 0.3;
     justify-content: center;
     text-align: center;
 }
-.category-sample{
-    max-width: 250px;
-    padding: 20px;
-    min-width: 130px;
-    margin: 20px;
-    background-color: rgba(17, 17, 17, 0.671);
-}
 .category-sample-description{
     padding: 10px;
     text-align: justify;
@@ -73,6 +66,24 @@ $hexagon-index: 0.3;
     z-index: 10;
     padding: 20px;
 }
+// ============================== HABBIT ================================
+.habbit-list{
+    margin-bottom: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: stretch;
+    text-align: center;
+}
+.habbit-item{
+    //max-width: 250px;
+    padding: 20px;
+    min-width: 130px;
+    margin: 10px;
+    background-color: rgba(17, 17, 17, 0.671);
+    color: white;
+    flex-grow: 1;
+}
+
 
 // ================================ FIRST SCREEN ===========================
 .first-section{
@@ -106,14 +117,14 @@ $hexagon-index: 0.3;
         //letter-spacing: 1px;
         line-height: 36px;
         //text-transform: uppercase;
-        text-align: justify;
+        text-align: left;
     }
     .secondary-words{
         margin-top: 30px;
         font-size: 20px;
         //letter-spacing: 4px;
         //text-transform: uppercase;
-        text-align: justify;
+        text-align: left;
     }
 }
 .right-home-container{
@@ -129,16 +140,72 @@ $hexagon-index: 0.3;
 .footer-on-home{
     width: 100%;
     box-sizing: border-box;
-    // display: flex;
-    // justify-content: space-between;
+    display: flex;
+    justify-content: center;
     margin: auto;
     color: white;
     background-color: rgba(17, 17, 17, 0.527);
     padding: 10px;
+    cursor: pointer;
     button, locale-change{
         font-size: 20px;
     }
+    .footer-main-word{
+        display: flex;
+        align-items: center;
+        margin:20px;
+    }
 }
+
+// =================================ANIMATED ARROW================================
+.arrowAnim {
+    margin-top: -10px;
+    width: 30px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .arrow {
+    width: 15px;
+    height: 15px;
+    border: 3px solid;
+    border-color:transparent transparent white white;
+    transform: rotate(-45deg);
+  }  
+  
+  .arrowSliding {
+    position: absolute;
+    -webkit-animation: slide 4s linear infinite; 
+            animation: slide 4s linear infinite;
+  }
+  
+  .delay1 {
+    -webkit-animation-delay: 1s; 
+      animation-delay: 1s;
+  }
+  .delay2 {
+    -webkit-animation-delay: 2s; 
+      animation-delay: 2s;
+  }
+  .delay3 {
+    -webkit-animation-delay: 3s; 
+      animation-delay: 3s;
+  }
+  
+  @-webkit-keyframes slide {
+      0% { opacity:0; transform: translateY(-30px); }  
+     20% { opacity:1; transform: translateY(-18px); }   
+     80% { opacity:1; transform: translateY(18px); }  
+    100% { opacity:0; transform: translateY(30px); } 
+  }
+  @keyframes slide {
+      0% { opacity:0; transform: translateY(-30px); }  
+     20% { opacity:1; transform: translateY(-18px); }   
+     80% { opacity:1; transform: translateY(18px); }  
+    100% { opacity:0; transform: translateY(30px); } 
+  }
 
 // ============================ PARALLAX FROM TRAVIS =================================
 
