Work with header

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,3 +8,7 @@
     -o-background-size: cover; /* Opera 9.6+ */
     background-size: cover; /* Современные браузеры */
 }
+
+// .menu-on-home{
+//     height: 57px;
+// }
