--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -70,7 +70,7 @@
     
 
     <section class="section section-dark">
-        <h1>Как с нами работать?</h1>
+        <h1 class="how-to-work">Как с нами работать?</h1>
         <div class="all-steps-container">
             <div class="step-container white-shadow" routerLink="/category">
                 <div class="step-header">ШАГ 1:</div>
@@ -101,30 +101,30 @@
     <div class="pimg2-container">
         <div class="inspire-words">
             <div class="left-fast">
-                    <span class="border">
-                        Ставь цели
-                    </span>
-                </div>
-                <div class="center-to-right">
-                    <span class="border">
-                        Будь одержим
-                    </span>
-                </div>
-                <div class="center-fix">
-                    <span class="border">
-                        Распиши план
-                    </span>
-                </div>
-                <div class="center-to-up">
-                    <span class="border">
-                        Не сдавайся
-                    </span>
-                </div>
-                <div class="right-fast">
-                    <span class="border">
-                        Получай результат
-                    </span>
-                </div>
+                <span class="border">
+                    Ставь цели
+                </span>
+            </div>
+            <div class="center-to-right">
+                <span class="border">
+                    Будь одержим
+                </span>
+            </div>
+            <div class="center-fix">
+                <span class="border">
+                    Распиши план
+                </span>
+            </div>
+            <div class="center-to-up">
+                <span class="border">
+                    Не сдавайся
+                </span>
+            </div>
+            <div class="right-fast">
+                <span class="border">
+                    Получай результат
+                </span>
+            </div>
         </div>
         
         <div class="pimg2">          
