--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header-menu">
     <div class="left-area-menu">
         <button mat-button routerLink="/home" class="logo">
             <mat-icon>home</mat-icon>
