--- a/src/app/brick/brick-modal/brick-modal.component.html
+++ b/src/app/brick/brick-modal/brick-modal.component.html
@@ -1,11 +1,11 @@
 <div class="title-container">
-  Укажите цель на {{data.curBrick.date | date:'dd.MM.yyyy'}}
+    Твои действия - {{data.curBrick.date | date:'dd.MM.yyyy'}}
 </div>
 
 <form [formGroup]="brickDetailsForm" class="brick-modal-form" >
 
     <mat-form-field>
-      <mat-select placeholder="BrickTypes" matInput required formControlName="brickType">
+      <mat-select placeholder="Привычка" matInput required formControlName="brickType">
         <mat-option *ngFor="let brickType of existentBrickTypes"
                     [value]="brickType._id">
           <div class="color-list-option">
@@ -17,7 +17,7 @@
     </mat-form-field>
   
     <mat-form-field>
-      <textarea matInput placeholder="Description" rows="5" formControlName="description"></textarea>
+      <textarea matInput placeholder="Описание" rows="5" formControlName="description"></textarea>
     </mat-form-field>
 
     <div class="button-container">
