--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,6 +1,12 @@
+         
+<wall-side-nav 
+    [visibleBrickTypes]="existentBrickTypes"
+    (tickBrickType)="filterByHabbit($event)">
+        Wall Side Nav
+</wall-side-nav>
 
 <div class="calendar">
-            
+
     <div class="nav-container">
         <div class="calendar-buttons" >
             <div class="prev-next-container">
