--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -271,7 +271,7 @@
             </div> -->
         <div class="categories-cards">
             <div class="category-test">
-                <h1>Работай со своими привычками</h1>
+                <h1>Создай полезные привычки</h1>
             </div>
             <div class="habbit-list">
                 <div class="habbit-item">Чтение 30 мин в день</div>
