--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -32,8 +32,10 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     flex-basis: 13.6%;
 }
-.one-day:hover{
-    background: #0097a7;
+.one-day:hover:not(.day-disabled){    
+    background: #0097a7;    
+}
+.day-pointer{
     cursor: pointer;
 }
 .day-today{
@@ -44,6 +46,7 @@
 }
 .day-disabled{
     background:  rgba(109, 109, 109, 0.712);
+    cursor: default!important;
 }
 .bricks-container{
     width: 100%;
@@ -62,23 +65,23 @@
     color: white;
     font-size: 16px;
 }
-.brick-in-calendar {
-    //z-index: 100;
-    margin: 5px 4px;
-    font-size: 14px;
-    width: 33px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-weight: bold;
-    //text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    // text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    //border: 1px solid black;
-    border-radius: 3px;
-    box-sizing: border-box;
-}
+// .brick-in-calendar {
+//     //z-index: 100;
+//     margin: 5px 4px;
+//     font-size: 14px;
+//     width: 33px;
+//     height: 20px;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     color: white;
+//     font-weight: bold;
+//     //text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+//     // text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+//     //border: 1px solid black;
+//     border-radius: 3px;
+//     box-sizing: border-box;
+// }
 .brick-in-calendar:hover{
     border: 1px solid white;
 }
