--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,20 @@ body {
     }
 }
 
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
+}
+
+.checkbox-content .mat-checkbox-label{
+    display: flex;
+    justify-content: space-between;
+    width: 180px;
+}
+
 // ================================== MENU ============================
 
 .toolbar-container{
@@ -332,4 +346,24 @@ $hexagon-index: 1;
 }
 .category-own:after{
     border-top: 75px * $hexagon-index solid  #444444; 
+}
+
+// ======================= BRICK ===========================
+
+.brick-in-calendar {
+    //z-index: 100;
+    margin: 5px 4px;
+    font-size: 14px;
+    width: 33px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-weight: bold;
+    //text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    // text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    //border: 1px solid black;
+    border-radius: 3px;
+    box-sizing: border-box;
 }
