--- a/src/app/components/wall-side-nav/wall-side-nav.component.scss
+++ b/src/app/components/wall-side-nav/wall-side-nav.component.scss
@@ -79,8 +79,8 @@
 
 .side-bar-body{
     padding: 20px;
-    // position: relative;
-    // z-index: 50;
+    overflow-y: overlay;
+    max-height: 500px;
 }
 
 .side-bar-list{
@@ -115,3 +115,19 @@
 .brick-in-sidebar{    
     min-width: 33px;
 }
+
+// ============================ SCROLLBAR ======================
+.side-bar-body::-webkit-scrollbar{
+    width: 12px;
+} 
+.side-bar-body::-webkit-scrollbar-thumb{
+    background-color: #0097a7;
+    border-radius: 6px;
+    border: 1px solid #464646;
+}
+.side-bar-body::-webkit-scrollbar-thumb:hover{
+    background-color: #02707c;
+}
+.side-bar-body::-webkit-scrollbar-thumb:active{
+    background-color: #01636e;
+} 
