--- a/src/app/frend/frend/frend.component.html
+++ b/src/app/frend/frend/frend.component.html
@@ -10,6 +10,7 @@
         (addFrendEvent)="onAddFrend($event)"></frend-search>
 
     <frend-list
-        [frendList]="myFrends"></frend-list>
+        [frendList]="myFrends"
+        (deleteFrendEvent)="onDeleteFrend($event)"></frend-list>
     
 </div>
