--- a/src/content/variables.scss
+++ b/src/content/variables.scss
@@ -3,3 +3,4 @@ $primaryColor: #0097a7;
 $contextBackground: #254a61;
 $textColor: #fff;
 $mainBackground: rgba(34,34,34,.712);
+$lightBackground: rgba(82, 82, 82, 0.712);
