--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,15 @@ body {
     width: 180px;
 }
 
+
+.warn-span{
+    width: 60%;
+    background: #fc9595;
+    padding: 5px 0px;
+    margin: 20px;
+    text-align: center;
+}
+
 // ================================== MENU ============================
 
 .toolbar-container{
