--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -17,13 +17,13 @@
             display: flex;
             justify-content: space-between;
         }
-        .warn-span{
-            width: 60%;
-            background: #fc9595;
-            padding: 5px 0px;
-            margin: 20px;
-            text-align: center;
-        }
+        // .warn-span{
+        //     width: 60%;
+        //     background: #fc9595;
+        //     padding: 5px 0px;
+        //     margin: 20px;
+        //     text-align: center;
+        // }
     }
 }
 .auth-link {
